--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -1,3 +1,19 @@
 @use "./base.scss";
 
 // put your custom CSS here!
+
+// Custom CSS for centering images
+img[alt*="center"] {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+// You can add width control here if needed
+img[alt*="center"][alt*="|"] {
+  width: auto;  // This allows the width to be controlled by the Markdown
+}
+
+img {
+border-radius: 15px;
+}
